layout bug resolved

--- a/ui/src/app/components/table/table.component.scss
+++ b/ui/src/app/components/table/table.component.scss
@@ -26,6 +26,6 @@ ion-col {
   background-color: white;
 }
 .row-style:hover {
-    box-shadow: 0.5em 0.5em 0.5em rgba(68, 68, 68, 0.6);
+  box-shadow: 0 0 4px 0 rgba(0,0,0,0.75);
     border-left: 0.2em solid blue;
 }
